--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^1.1.0",
     "axios": "^0.25.0",
     "config": "^3.3.7",
     "cors": "^2.8.5",
