--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,6 @@
     functions="functions"
 
 [[redirects]]
-    to="/.netlify/functions/app"
+    to="/.netlify/src/functions/app"
     from="/*"
     status=200
